<resources>
    <string name="app_name">WeatherApp</string>
    <string name="reload_toast">Данные разрешения очень важны для работы приложения. Пожалуйста, перезапустите приложение и выдайте доступ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_fragment">Map fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="news_fragment">News Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="weather_date">Погода на:</string>
    <string name="clouds">Облачность:</string>
    <string name="humidity">Влажность:</string>
    <string name="pressure">Давление:</string>
    <string name="wind_speed">Скорость ветра:</string>
    <string name="max">Температура max:</string>
    <string name="min">Температура min:</string>
    <string name="details_weather">Детальная информация:</string>
    <string name="weather_now">Температура:</string>
    <string name="feels_like">Ощущается как:</string>
    <string name="percent">%</string>
</resources>