<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvHumidity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/tvClouds"
        app:layout_constraintTop_toTopOf="@+id/tvClouds"
        android:text="@string/percent" />

    <TextView
        android:id="@+id/tvFeelsTemperatureHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/feels_like"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toStartOf="@+id/viewVertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMinTemperatureHint" />

    <TextView
        android:id="@+id/tvNowTemperatureHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/weather_now"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toStartOf="@+id/viewVertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFeelsTemperatureHint" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbarCommunication"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_weather"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/toolbar_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:textColor="@color/grey_text"
            android:layout_gravity="end"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold" />



    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/viewInToolbar"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/mainToolbarCommunication" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHumidity" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPressure" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWindSpeed" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClouds" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <View
        android:id="@+id/viewVertical"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@color/grey_text"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintStart_toEndOf="@+id/tvWindSpeed2"
        app:layout_constraintTop_toBottomOf="@id/mainToolbarCommunication" />

    <View
        android:id="@+id/viewVertical2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/grey_text"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toStartOf="@+id/tvWindSpeed3"
        app:layout_constraintTop_toBottomOf="@id/mainToolbarCommunication" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/viewVertical2"
        app:layout_constraintStart_toEndOf="@+id/viewVertical"
        app:layout_constraintTop_toBottomOf="@id/mainToolbarCommunication"
        tools:text="дата" />

    <TextView
        android:id="@+id/tvDateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/weather_date"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toStartOf="@+id/tvDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainToolbarCommunication" />

    <TextView
        android:id="@+id/tvClouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:text="облачность" />

    <TextView
        android:id="@+id/tvCloudsHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/clouds"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toStartOf="@+id/tvClouds"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:text="влажность" />

    <TextView
        android:id="@+id/tvHumidityHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/humidity"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toStartOf="@+id/tvHumidity"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/tvPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        tools:text="давление" />

    <TextView
        android:id="@+id/tvPressure2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pressure"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvPressure"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/tvWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        tools:text="скорость ветра" />

    <TextView
        android:id="@+id/tvWindSpeed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="39dp"
        android:text="@string/wind_speed"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toStartOf="@+id/tvWindSpeed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/tvWindSpeed3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/wind_speed"
        android:textColor="@color/grey_text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/tvMaxTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tvMaxTemperatureHint"
        app:layout_constraintTop_toBottomOf="@+id/tvWindSpeed"
        tools:text="" />

    <TextView
        android:id="@+id/tvMaxTemperatureHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/max"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toStartOf="@+id/viewVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWindSpeed" />

    <TextView
        android:id="@+id/tvMinTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tvMaxTemperature"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxTemperatureHint"
        tools:text="" />

    <TextView
        android:id="@+id/tvFeelsTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tvMaxTemperature"
        app:layout_constraintTop_toTopOf="@+id/tvFeelsTemperatureHint"
        tools:text="" />

    <TextView
        android:id="@+id/tvNowTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tvFeelsTemperature"
        app:layout_constraintTop_toTopOf="@+id/tvNowTemperatureHint"
        tools:text="" />

    <TextView
        android:id="@+id/tvMinTemperatureHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/min"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toStartOf="@+id/viewVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxTemperatureHint" />


</androidx.constraintlayout.widget.ConstraintLayout>
